--- a/package.json
+++ b/package.json
@@ -2,11 +2,15 @@
   "name": "task-manager-group2",
   "version": "1.0.0",
   "description": "",
-  "main": "tailwind.config.js",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1", "dev": "npx tailwindcss -i ./assets/styles/styles.css -o assets/styles/output.css --watch"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "npx tailwindcss -i ./assets/styles/styles.css -o ./assets/styles/output.css --watch"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "tailwindcss": "^3.4.7"
+  }
 }
