--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "task-manager-group2",
   "version": "1.0.0",
-  "description": "",
+  "description": "live link :https://roaring-moonbeam-1b7c5d.netlify.app/",
   "main": "tailwind.config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -10,7 +10,6 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {},
   "devDependencies": {
     "tailwindcss": "^3.4.7"
   }
